--- a/Tasks/Task_03.ipynb
+++ b/Tasks/Task_03.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Schelling model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -59,6 +66,16 @@
     "        sc = self.__get_satisfaction_card()\n",
     "        self.__change_location(sc)\n",
     "        return self.board, (~sc).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task\n",
+    "\n",
+    "1. Create 9 gifs of map evolution for 9 values of R.\n",
+    "2. Plot the number of households that want to move versus time for 9 values of R on one graph, label 9 curves, label the axes and title the graph."
    ]
   },
   {
